--- a/web/src/pages/CreatePoint/styles.css
+++ b/web/src/pages/CreatePoint/styles.css
@@ -276,6 +276,50 @@
   }
 
 }
+
+#submit-screen {
+  visibility: hidden;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  bottom: 0;
+  position: fixed;
+  background: rgba(10, 9, 15, 0);
+  color: white;
+  z-index: 1000;
+  transition: background 1s;
+}
+
+#submit-screen.show{
+  visibility: visible;
+  background: rgba(10, 9, 15, 0.96);
+}
+
+#submit-screen-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+#submit-screen p{
+  font-size: 40px;
+  font-weight: 800;
+  position: relative;
+  text-align: center;
+  z-index: 1001;
+}
+
+
+#submit-screen svg {
+  color: #34cb79;
+  text-align: center;
+  font-size: 65px;
+  position: relative;
+  margin-bottom: 20px;
+}
+
 /* //////////////////////////////////////////////////*/
 /*///////////////////////////////////////////////////*/
 
