--- a/web/src/pages/Home/styles.css
+++ b/web/src/pages/Home/styles.css
@@ -1,6 +1,6 @@
 #page-home {
   height: 100vh;
-  background: url('../../assets/home-background.svg') no-repeat 500px bottom;
+  background: url('../../assets/home-background.svg') no-repeat right bottom;
   background-size: 55%;  
 }
 
